--- a/GameOn/app/src/main/AndroidManifest.xml
+++ b/GameOn/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
         android:allowBackup="true"
@@ -39,6 +40,14 @@
         </activity>
         <activity
             android:name=".Found_opponent"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".MatchResult"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".SignUp"
             android:screenOrientation="portrait">
         </activity>
 
